<resources>
    <string name="app_name">Cookpad</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_new_recipe">New Recipe</string>
    <string name="action_profile">Profile</string>
    <string name="action_shopping">Shoping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="countries">
        <item>Afghanistan</item>
        <item>America (U.S)</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Austrian</item>
        <item>Austrian Empire</item>
        <item>Azerbaijan</item>
        <item>Baden</item>
        <item>Bahamas, The</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Bavaria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin (Dahomey)</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina Empire</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Brunswick and Lüneburg</item>
        <item>Burkina Faso (Upper Volta)</item>
        <item>Burma</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cayman Islands, The</item>
        <item>Central African Republic</item>
        <item>Central American Federation</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo Free State, The</item>
        <item>Costa Rica</item>
        <item>Cote d’Ivoire (Ivory Coast)</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Czechoslovakia</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Duchy of Parma, The</item>
        <item>East Germany (German Democratic Republic)</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Federal Government of Germany (1848-49)</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia, The</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Grand Duchy of Tuscany, The</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Hanover</item>
        <item>Hanseatic Republics</item>
        <item>Hesse</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kingdom of Serbia/Yugoslavia</item>
        <item>Kiribati</item>
        <item>Korea</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Lew Chew</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mecklenburg-Schwerin</item>
        <item>Mecklenburg-Strelitz</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nassau</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands, The</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North German Confederation</item>
        <item>North German Union</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oldenburg</item>
        <item>Oman</item>
        <item>Orange Free State</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papal States</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Piedmont-Sardinia</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Republic of Genoa</item>
        <item>Republic of Korea (South Korea)</item>
        <item>Republic of the Congo</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Schaumburg-Lippe</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands, The</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Texas</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Two Sicilies</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Union of Soviet Socialist Republics</item>
        <item>United Arab Emirates, The</item>
        <item>United Kingdom, The (U.K)</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Württemberg</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>