<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home_black"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black"/>

    <item
        android:id="@+id/action_new_recipe"
        android:title="@string/action_new_recipe"
        android:icon="@drawable/ic_add_black"/>

    <item
        android:id="@+id/action_shopping"
        android:title="@string/action_shopping"
        android:icon="@drawable/ic_shopping_black"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile_black"/>

</menu>